--- a/index.html
+++ b/index.html
@@ -11,7 +11,111 @@
 </head>
 
 <body>
-    <h1>robin</h1>
+    <header>
+        <!-- Navber part start -->
+        <section class="container">
+            <nav class="navbar navbar-expand-lg bg-light fixed-top">
+                <div class="container-fluid">
+
+                    <a class="navbar-brand fw-bold" href="#">Pro Course</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Courses </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Deals </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Success </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Register</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+
+            </nav>
+        </section>
+        <!-- Navber part end -->
+        <!-- slider part start -->
+        <section class="my-5">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="img-fluid" src="images/cover/cover-1.png" class="d-block w-100" alt="..."
+                            height="700px">
+                        <div class="carousel-caption">
+                            <h1>Get Started Digital
+                                Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the readable
+                                content of a page when looking at its layout.</p>
+                            <button type="button" class="btn btn-info text-light fw-bold">Get Started</button>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="img-fluid" src="images/cover/cover-2.jpg" class="d-block w-100" alt="..."
+                            height="700px">
+                        <div class="carousel-caption">
+                            <h1>Get Started Digital
+                                Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the readable
+                                content of a page when looking at its layout.</p>
+                            <button type="button" class="btn btn-info text-light fw-bold">Get Started</button>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="img-fluid" src="images/cover/cover-3.jpg" class="d-block w-100" alt="..."
+                            height="700px">
+                        <div class="carousel-caption">
+                            <h1>Get Started Digital
+                                Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the readable
+                                content of a page when looking at its layout.</p>
+                            <button type="button" class="btn btn-info text-light fw-bold">Get Started</button>
+
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slider part end -->
+    </header>
 
 
 
