--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <!-- Navber part start -->
         <section class="container">
-            <nav class="navbar navbar-expand-lg bg-light fixed-top">
+            <nav class="navbar navbar-expand-lg bg-light container">
                 <div class="container-fluid">
 
                     <a class="navbar-brand fw-bold" href="#">Pro Course</a>
@@ -116,6 +116,108 @@
         </section>
         <!-- slider part end -->
     </header>
+    <main>
+        <!-- popular course part start -->
+        <section class="container my-5">
+            <h1 class="text-center">Discover Our Popular <br>
+                Courses</h1>
+            <p class="text-center text-secondary">It is a long established fact that a reader will be distracted by the
+                readable <br>
+                content of a page when looking at its layout.</p>
+
+            <div class="row mt-3 g-4">
+                <div class="col-md-6 col-sm-12">
+                    <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
+                        <div>
+                            <img src="images/course/course-1.png" alt="">
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-dark">Fundamental Of UI/UX Design</h4>
+                            <p class="text-secondary">Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h6 class="text-info">Price : 20$</h6>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
+                        <div>
+                            <img src="images/course/course-2.png" alt="">
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-dark">Javascript Basic to advanced</h4>
+                            <p class="text-secondary">Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h6 class="text-info">Price : 20$</h6>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
+                        <div>
+                            <img src="images/course/course-3.png" alt="">
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-dark">Fullstack Web Development
+                            </h4>
+                            <p class="text-secondary">Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h6 class="text-info">Price : 20$</h6>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
+                        <div>
+                            <img src="images/course/course-4.png" alt="">
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-dark">Digital Marketing</h4>
+                            <p class="text-secondary">Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h6 class="text-info">Price : 20$</h6>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
+                        <div>
+                            <img src="images/course/course-5.png" alt="">
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-dark">Photography Basic Rules</h4>
+                            <p class="text-secondary">Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h6 class="text-info">Price : 20$</h6>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
+                        <div>
+                            <img src="images/course/course-6.png" alt="">
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-dark">Motion Graphics</h4>
+                            <p class="text-secondary">Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h6 class="text-info">Price : 20$</h6>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+                <button type="button" class="btn btn-info text-light fw-bold ">See More Courses</button>
+            </div>
+        </section>
+        <!-- popular course part end -->
+    </main>
 
 
 
