larning instute end

--- a/index.html
+++ b/index.html
@@ -217,6 +217,40 @@
             </div>
         </section>
         <!-- popular course part end -->
+        <!-- larning instute part start -->
+        <section class="container my-5">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <img class="img-fluid" src="images/student/man.jpg" alt="">
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <h2 class="text-dark">Explore The elearning
+                        Institute
+                    </h2>
+                    <p class="text-secondary">BITI has been supporting clients nationwide in managing the evolving role
+                        of information
+                        technology in business. As a strategic business partner, we provide IT Training, Diversified IT
+                        solutions and services that support attainment of our clients’ business objectives.</p>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <h2>3.2K+</h2>
+                            <p class="text-secondary">Online Course</p>
+                        </div>
+                        <div>
+                            <h2>600+</h2>
+                            <p class="text-secondary">Expert member</p>
+                        </div>
+                        <div>
+                            <h2>1k+</h2>
+                            <p class="text-secondary">Rating & Review</p>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-info text-light fw-bold ">Read More</button>
+                </div>
+
+            </div>
+        </section>
+        <!-- larning instute part end -->
     </main>
 
 
