--- a/index.html
+++ b/index.html
@@ -251,6 +251,53 @@
             </div>
         </section>
         <!-- larning instute part end -->
+        <!-- modal part start -->
+        <section class="container bg-info py-5 my-5 rounded-3">
+
+            <div class="row ">
+                <div class="col-lg-6 col-md-6 col-sm-12 ps-5 text-white">
+                    <h2>Ready to join?</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a
+                        page when looking at its layout.</p>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 pe-5">
+                    <div class="d-flex justify-content-end align-items-center mt-5">
+                        <button data-bs-target="#exampleModal" data-bs-toggle="modal" type="button"
+                            class="btn btn-light text-info fw-bold ">Register Now</button>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Contact Us</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="#">
+                                <label class="fw-bold" for="name">Name: </label>
+                                <input id="name" type="text" placeholder="Type-your-name"
+                                    class="px-3 py-1 shadow-lg rounded-3 border border-0"> <br>
+                                <label class="fw-bold mt-4" for="mail">Email: </label>
+                                <input id="mail" type="email" placeholder="Type-your-email"
+                                    class="px-3 py-1 shadow-lg rounded-3 border border-0">
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- modal part end -->
     </main>
 
 
