--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/624ee74696.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -53,7 +54,7 @@
         </section>
         <!-- Navber part end -->
         <!-- slider part start -->
-        <section class="my-5">
+        <section class="my-5 container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -349,6 +350,76 @@
             </div>
         </section>
         <!-- Successful part end -->
+        <!-- freedback part start -->
+        <section class="container my-5">
+            <h1 class="text-center">Some Students Feedback</h1>
+            <p class="text-secondary text-center">It is a long established fact that a reader will be distracted by the
+                readable <br>
+                content of a page when looking at its layout.</p>
+            <div class="container overflow-hidden  ">
+                <div class="row gx-5 mt-4 ">
+                    <div class="col-lg-6 col-md-6 col-sm-12 ">
+                        <div class="p-3 border bg-light p-5 rounded-3">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <img class="img-fluid" src="images/comma.png" alt="">
+                                <div>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                </div>
+                            </div>
+                            <p class="text-secondary my-4">Programming Hero has helped me in many ways to develop my
+                                career.
+                                They taught me how to work professionally in the programming sector. How to learn and
+                                achieve by working hard. I will always be grateful to Jhangkar Mahbub Bhaiya and the
+                                programming hero team. The decision to take a course in programming hero is the best
+                                decision of my life.</p>
+                            <div class="d-flex align-items-center">
+                                <img src="images/student/student-5.png" alt="" height="80px">
+                                <div class="ms-4">
+                                    <h6>Robin Hossain</h6>
+                                    <p class="text-secondary">Web Developer</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12  ">
+                        <div class="p-3 border bg-light p-5 rounded-3">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <img class="img-fluid" src="images/comma.png" alt="">
+                                <div>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                </div>
+                            </div>
+                            <p class="text-secondary my-4">Programming Hero has helped me in many ways to develop my
+                                career.
+                                They taught me how to work professionally in the programming sector. How to learn and
+                                achieve by working hard. I will always be grateful to Jhangkar Mahbub Bhaiya and the
+                                programming hero team. The decision to take a course in programming hero is the best
+                                decision of my life.</p>
+                            <div class="d-flex align-items-center">
+                                <img src="images/student/student-6.png" alt="" height="80px">
+                                <div class="ms-4">
+                                    <h6>Reto Moni</h6>
+                                    <p class="text-secondary">Degital Markating</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- freedback part end -->
+
+
     </main>
 
 
