--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 content of a page when looking at its layout.</p>
             <div class="container overflow-hidden  ">
                 <div class="row gx-5 mt-4 ">
-                    <div class="col-lg-6 col-md-6 col-sm-12 ">
+                    <div class="col-lg-6 col-md-12 col-sm-12 ">
                         <div class="p-3 border bg-light p-5 rounded-3">
                             <div class="d-flex justify-content-between align-items-center">
                                 <img class="img-fluid" src="images/comma.png" alt="">
@@ -385,7 +385,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12  ">
+                    <div class="col-lg-6 col-md-12 col-sm-12  ">
                         <div class="p-3 border bg-light p-5 rounded-3">
                             <div class="d-flex justify-content-between align-items-center">
                                 <img class="img-fluid" src="images/comma.png" alt="">
@@ -415,9 +415,89 @@
 
                 </div>
             </div>
+            <div class="d-flex justify-content-center mt-5">
+                <button type="button" class="btn btn-info text-light fw-bold d-lg-none ">View All
+                </button>
+            </div>
         </section>
 
         <!-- freedback part end -->
+        <!-- Asked Question part start -->
+        <section class="container my-5">
+            <h1 class="text-center">Frequently Asked Questions</h1>
+            <p class="text-center text-secondary">It is a long established fact that a reader will be distracted by the
+                readable <br>
+                content of a page when looking at its layout.</p>
+            <div class="accordion mt-5" id="accordionExample">
+                <div class="accordion-item mb-4">
+                    <h2 class="accordion-header " id="headingOne">
+                        <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What is the difference between Flexbox and grid?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-secondary">
+                            <strong>Difference between Flexbox and grid : </strong> Grid and flexbox. The basic
+                            difference between CSS Grid Layout and CSS Flexbox Layout is
+                            that flexbox was designed for layout in one dimension - either a row or a column. Grid was
+                            designed for two-dimensional layout - rows, and columns at the same time.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item mb-4">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            What is difference between Bootstrap and Tailwind?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-secondary">
+                            <strong>Difference between Bootstrap and Tailwind : </strong>Bootstrap comes with a set of
+                            pre-styled responsive, mobile-first components that possess a definite UI kit. Tailwind CSS
+                            uses a set of utility classes to create a neat UI with more flexibility and uniqueness.
+                            Sites created using Bootstrap follow the generic pattern that makes them look identical.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item mb-4">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            What is box model in CSS?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-secondary">
+                            <strong>Box model : </strong> The CSS box model is essentially a box that wraps around every
+                            HTML element. It consists of: margins, borders, padding, and the actual content.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            What is a semantic tag?
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-secondary">
+                            <strong>Semantic tag : </strong> The HTML semantics refers to the tags that provide meaning
+                            to an
+                            HTML page rather than just presentation. It makes HTML more comprehensible by better
+                            defining the different sections and layout of web pages.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Asked Question part end -->
 
 
     </main>
