--- a/index.html
+++ b/index.html
@@ -498,6 +498,19 @@
             </div>
         </section>
         <!-- Asked Question part end -->
+        <!-- trusted company part start -->
+        <section class="container my-5 d-lg-block d-none">
+            <h1 class="text-center">Trusted by over 800+ companies</h1>
+            <div class="mt-5 d-flex justify-content-between">
+                <img class="img-fluid" src="images/company/company-1.png" alt="">
+                <img class="img-fluid" src="images/company/company-2.png" alt="">
+                <img class="img-fluid" src="images/company/company-3.png" alt="">
+                <img class="img-fluid" src="images/company/company-4.png" alt="">
+                <img class="img-fluid" src="images/company/company-5.png" alt="">
+                <img class="img-fluid" src="images/company/company-6.png" alt="">
+            </div>
+        </section>
+        <!-- trusted company part end -->
 
 
     </main>
