--- a/index.html
+++ b/index.html
@@ -511,9 +511,24 @@
             </div>
         </section>
         <!-- trusted company part end -->
-
-
     </main>
+    <!-- footer part start -->
+    <footer class="py-5 bg-dark text-center text-light">
+        <h1>Pro Course</h1>
+        <p>Office 41, Zawaya Buildin, Ghala Muscat, </p>
+        <p>Sultanate of Oman</p>
+        <p>Privacy Ploicy | Terms of use</p>
+        <div>
+            <a href="https://www.facebook.com/profile.php?id=100068823075007" target="_blank"><i
+                    class="fa-brands text-light ms-3 icon-size fa-facebook"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands text-light ms-3 icon-size fa-twitter"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands text-light ms-3 icon-size fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCQ87yVOcvwY_DkRrWKQ6Krg" target="_blank"><i
+                    class="fa-brands text-light ms-3 icon-size fa-youtube"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands text-light ms-3 icon-size fa-linkedin"></i></a>
+        </div>
+    </footer>
+    <!-- footer part end -->
 
 
 
