--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                     <div class="carousel-item active">
                         <img class="img-fluid" src="images/cover/cover-1.png" class="d-block w-100" alt="..."
                             height="700px">
-                        <div class="carousel-caption">
+                        <div
+                            class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                             <h1>Get Started Digital
                                 Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable
@@ -80,7 +81,8 @@
                     <div class="carousel-item">
                         <img class="img-fluid" src="images/cover/cover-2.jpg" class="d-block w-100" alt="..."
                             height="700px">
-                        <div class="carousel-caption">
+                        <div
+                            class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                             <h1>Get Started Digital
                                 Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable
@@ -92,7 +94,8 @@
                     <div class="carousel-item">
                         <img class="img-fluid" src="images/cover/cover-3.jpg" class="d-block w-100" alt="..."
                             height="700px">
-                        <div class="carousel-caption">
+                        <div
+                            class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                             <h1>Get Started Digital
                                 Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable
