--- a/index.html
+++ b/index.html
@@ -53,21 +53,13 @@
             </nav>
         </section>
         <!-- Navber part end -->
+
         <!-- slider part start -->
-        <section class="my-5 container">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
+        <section class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="img-fluid" src="images/cover/cover-1.png" class="d-block w-100" alt="..."
-                            height="700px">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div
                             class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                             <h1>Get Started Digital
@@ -79,8 +71,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="img-fluid" src="images/cover/cover-2.jpg" class="d-block w-100" alt="..."
-                            height="700px">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                         <div
                             class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                             <h1>Get Started Digital
@@ -92,8 +83,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="img-fluid" src="images/cover/cover-3.jpg" class="d-block w-100" alt="..."
-                            height="700px">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                         <div
                             class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                             <h1>Get Started Digital
@@ -106,12 +96,12 @@
                     </div>
 
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
@@ -130,10 +120,10 @@
                 content of a page when looking at its layout.</p>
 
             <div class="row mt-3 g-4">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
                         <div>
-                            <img src="images/course/course-1.png" alt="">
+                            <img class="w-100" src="images/course/course-1.png" alt="">
                         </div>
                         <div class="ms-3">
                             <h4 class="text-dark">Fundamental Of UI/UX Design</h4>
@@ -144,10 +134,10 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
                         <div>
-                            <img src="images/course/course-2.png" alt="">
+                            <img class="w-100" src="images/course/course-2.png" alt="">
                         </div>
                         <div class="ms-3">
                             <h4 class="text-dark">Javascript Basic to advanced</h4>
@@ -158,10 +148,10 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
                         <div>
-                            <img src="images/course/course-3.png" alt="">
+                            <img class="w-100" src="images/course/course-3.png" alt="">
                         </div>
                         <div class="ms-3">
                             <h4 class="text-dark">Fullstack Web Development
@@ -173,10 +163,10 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12 d-none d-lg-flex">
                     <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
                         <div>
-                            <img src="images/course/course-4.png" alt="">
+                            <img class="w-100" src="images/course/course-4.png" alt="">
                         </div>
                         <div class="ms-3">
                             <h4 class="text-dark">Digital Marketing</h4>
@@ -187,10 +177,10 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12 d-none d-lg-flex">
                     <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
                         <div>
-                            <img src="images/course/course-5.png" alt="">
+                            <img class="w-100" src="images/course/course-5.png" alt="">
                         </div>
                         <div class="ms-3">
                             <h4 class="text-dark">Photography Basic Rules</h4>
@@ -201,10 +191,10 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12 d-none d-lg-flex">
                     <div class="d-lg-flex d-md-flex d-sm-block align-items-center border rounded-3">
                         <div>
-                            <img src="images/course/course-6.png" alt="">
+                            <img class="w-100" src="images/course/course-6.png" alt="">
                         </div>
                         <div class="ms-3">
                             <h4 class="text-dark">Motion Graphics</h4>
@@ -265,9 +255,9 @@
                         page when looking at its layout.</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 pe-5">
-                    <div class="d-flex justify-content-end align-items-center mt-5">
+                    <div class="d-flex justify-content-lg-end justify-content-center  align-items-center mt-5">
                         <button data-bs-target="#exampleModal" data-bs-toggle="modal" type="button"
-                            class="btn btn-light text-info fw-bold ">Register Now</button>
+                            class="btn btn-light text-info fw-bold text-center">Register Now</button>
                     </div>
                 </div>
             </div>
